--- a/src/styles/components/forms/button.css
+++ b/src/styles/components/forms/button.css
@@ -3,15 +3,15 @@
 }
 
 .btn.btn-secondary {
-  @apply border-secondary-800 bg-secondary-800 hover:bg-secondary-900 text-white focus:ring-secondary-300;
+  @apply border-secondary-800 bg-secondary-800 hover:bg-secondary-900 text-white focus:ring-secondary-300 dark:focus:ring-secondary-600;
 }
 
 .btn.btn-primary {
-  @apply border-primary-600 bg-primary-600 hover:bg-primary-700 text-white focus:ring-primary-300;
+  @apply border-primary-600 bg-primary-600 hover:bg-primary-700 text-white focus:ring-primary-300 dark:focus:ring-primary-600/40;
 }
 
-.btn.btn-light {
-  @apply border-neutral-300 bg-neutral-50 hover:bg-neutral-300 text-neutral-900 focus:ring-neutral-200;
+.btn.btn-theme {
+  @apply border-neutral-300 dark:border-neutral-700 bg-neutral-50 dark:bg-neutral-800 hover:bg-neutral-300 dark:hover:bg-neutral-700 text-neutral-900 dark:text-neutral-50 focus:ring-neutral-200 dark:focus:ring-neutral-500;
 }
 
 .btn-icon {
@@ -23,5 +23,5 @@
 }
 
 .btn-icon.btn-secondary {
-  @apply border-secondary-800 bg-secondary-800 hover:bg-secondary-900 text-white focus:ring-secondary-300;
+  @apply border-secondary-800 bg-secondary-800 hover:bg-secondary-900 text-white focus:ring-secondary-300 dark:focus:ring-secondary-600;
 }
