--- a/src/styles/custom-components.css
+++ b/src/styles/custom-components.css
@@ -1,3 +1,6 @@
 /* forms */
 @import "./components/forms/button.css";
 @import "./components/forms/input-group.css";
+
+/* common */
+@import "./components/dropdown.css";
