--- a/src/styles/components/forms/button.css
+++ b/src/styles/components/forms/button.css
@@ -2,6 +2,10 @@
   @apply inline-flex items-center gap-1 rounded border  px-4 py-2 text-sm font-medium duration-200 focus:outline-none focus:ring-2 tracking-wide cursor-pointer;
 }
 
+.btn.btn-sm {
+  @apply px-2 py-1;
+}
+
 .btn.btn-ghost {
   @apply border-0 hover:bg-neutral-200 dark:hover:bg-neutral-700 bg-transparent;
 }
