--- a/src/styles/custom-components.css
+++ b/src/styles/custom-components.css
@@ -4,6 +4,7 @@
 
 /* custom components */
 @import "./components/dropdown.css";
+@import "./components/comments.css";
 
 /* common */
 @import "./components/common.css";
