--- a/src/styles/components/common.css
+++ b/src/styles/components/common.css
@@ -1,3 +1,3 @@
 .box {
-  @apply dark:bg-neutral-800 dark:border-neutral-700 border border-neutral-200 shadow-sm;
+  @apply bg-white dark:bg-neutral-800 dark:border-neutral-700 border border-neutral-200 shadow-sm;
 }
