--- a/src/styles/components/comments.css
+++ b/src/styles/components/comments.css
@@ -11,15 +11,15 @@
 }
 
 .comments_thread > img {
-  @apply w-[30px] h-[30px] rounded;
+  @apply w-[35px] h-[35px] rounded;
 }
 
 .comments_thread_body {
-  @apply flex-1 flex flex-col gap-1;
+  @apply flex-1 flex flex-col gap-0.5;
 }
 
 .comments_thread_title {
-  @apply font-medium;
+  @apply font-medium text-[15px];
 }
 
 .comments_thread_text {
