--- a/src/styles/components/comments.css
+++ b/src/styles/components/comments.css
@@ -23,7 +23,7 @@
 }
 
 .comments_thread_text {
-  @apply text-sm opacity-75;
+  @apply text-sm opacity-90;
 }
 
 .comments > .comments_thread_wrapper:not(:first-child) {
@@ -34,11 +34,14 @@
   @apply pl-3 min-[501px]:pl-5 flex flex-col gap-3;
 }
 
-.comments_thread_replies > .comments_thread_wrapper:not(:first-child) {
+.comments_thread_replies > .comments_thread_wrapper {
   @apply border-t border-t-neutral-900 pt-3;
 }
 
-.comments_thread_replies .comments_thread > .comments_thread_body button {
+.comments_thread_replies
+  .comments_thread
+  > .comments_thread_body
+  > .comment_thread_replay_btn {
   @apply hidden;
 }
 
