completed share button

--- a/src/styles/custom-base.css
+++ b/src/styles/custom-base.css
@@ -1,3 +1,3 @@
 body {
-  @apply bg-neutral-50 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-50 pb-[50px] scroll-smooth;
+  @apply bg-neutral-50 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-50 pb-[50px] scroll-smooth font-body;
 }
