--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Hind+Siliguri");
 @import "tailwindcss/base.css";
 @import "./custom-base.css";
 @import "tailwindcss/components.css";
