--- a/src/styles/custom-base.css
+++ b/src/styles/custom-base.css
@@ -1,3 +1,6 @@
+/* fonts */
+@import url("https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap");
+
 body {
   @apply bg-neutral-50 text-neutral-900 dark:bg-neutral-900 dark:text-neutral-50 pb-[50px] scroll-smooth font-body;
 }
