delete feature added

--- a/src/styles/components/forms/button.css
+++ b/src/styles/components/forms/button.css
@@ -2,6 +2,10 @@
   @apply inline-flex items-center gap-1 rounded border  px-4 py-2 text-sm font-medium duration-200 focus:outline-none focus:ring-2 tracking-wide cursor-pointer;
 }
 
+.btn:disabled {
+  @apply opacity-50 cursor-not-allowed !important;
+}
+
 .btn.btn-sm {
   @apply px-2 py-1;
 }
