layout file updated

--- a/src/styles/custom-components.css
+++ b/src/styles/custom-components.css
@@ -5,6 +5,8 @@
 /* custom components */
 @import "./components/dropdown.css";
 @import "./components/comments.css";
+@import "./components/appbar.css";
+@import "./components/sidebar.css";
 
 /* common */
 @import "./components/common.css";
