--- a/src/styles/custom-components.css
+++ b/src/styles/custom-components.css
@@ -7,6 +7,7 @@
 @import "./components/comments.css";
 @import "./components/appbar.css";
 @import "./components/sidebar.css";
+@import "./components/profile-stat.css";
 
 /* common */
 @import "./components/common.css";
